# libtagaro

./: CMakeLists.txt  KGameConfig.cmake.in  KGameConfigVersion.cmake.in  Mainpage.dox  Messages.sh  TagaroConfig.cmake.in  TagaroConfigVersion.cmake.in  autogen-includes.sh  libkgame_export.h  libtagaro_export.h
cmake/modules/: CMakeLists.txt  FindLibKGameVisuals.cmake  FindTagaro.cmake
doc/: Doxyfile  Doxyfile.in  libkgame.dot  libtagaro.dot
examples/: CMakeLists.txt  example-imagesource.cpp  example-imagesource.desktop
includes/: CMakeLists.txt  KgvBoard  KgvConfigDialog  KgvFileThemeProvider  KgvRenderer  KgvRendererClient  KgvSettings  KgvSpriteItem  KgvSpriteObjectItem  KgvTheme  KgvView  autogenerate.sh
includes/KGame/: AudioScene  Board  CMakeLists.txt  CachedProxyGraphicsSource  DeclarativeThemeProvider  Difficulty  DifficultySlider  GraphicsConfigDialog  GraphicsSource  GraphicsSourceConfig  MessageOverlay  ObjectPointer  Scene  Settings  SimpleThemeProvider  Sound  Sprite  SpriteClient  SpriteItem  SpriteObjectItem  StandardTheme  TouchWindow
includes/Tagaro/: Application  Board  CMakeLists.txt  CachedProxyRenderBackend  ConfigDialog  FileThemeProvider  Game  GraphicsConfigDialog  GraphicsSourceConfig  ObjectPointer  Renderer  RendererClient  RendererModule  Scene  Sprite  SpriteClient  SpriteItem  SpriteObjectItem  Theme  View
kgame/: CMakeLists.txt  config.h.in  settings.kcfg  settings.kcfgc
kgame/active/: pullhandlewidget.cpp  pullhandlewidget_p.h  slidelayout.cpp  slidelayout_p.h  touchwindow.cpp  touchwindow.h
kgame/audio/: audioscene.h  openalruntime_p.h  sound.h
kgame/core/: application.h  difficulty.cpp  difficulty.h
kgame/graphics/: apidox.cpp  declthemeprovider.h  graphicsconfigdialog.cpp  graphicsconfigdialog.h  graphicsdelegate.cpp  graphicsdelegate_p.h  graphicssource.cpp  graphicssource.h  graphicssourceconfig.h  sprite.cpp  sprite.h  sprite_p.h  spriteclient.cpp  spriteclient.h  spriteitem.cpp  spriteitem.h  spriteobjectitem.h  theme.cpp  theme.h  themeprovider.cpp  themeprovider.h
kgame/interface/: board.h  board_p.h  difficultyslider.cpp  difficultyslider.h  messageoverlay.h  scene.cpp  scene.h  scene_p.h
tagaro/: CMakeLists.txt  configdialog.cpp  configdialog.h  objectpool.cpp  objectpool.h  settings.kcfg  settings.kcfgc  tagaro-game.desktop
tagaro/audio/: audioscene-openal.cpp  audioscene-phonon.cpp  audioscene.cpp  audioscene.h  sound-openal.cpp  sound-phonon.cpp  sound.cpp  sound.h
tagaro/core/: application.cpp  application.h  game.cpp  game.h
tagaro/graphics/: apidox.cpp  board.cpp  board.h  declthemeprovider.cpp  declthemeprovider.h  graphicsconfigdialog.cpp  graphicsconfigdialog.h  graphicsdelegate.cpp  graphicsdelegate_p.h  graphicssource.cpp  graphicssource.h  graphicssourceconfig.cpp  graphicssourceconfig.h  graphicssources.cpp  graphicssources.h  renderbackend.cpp  renderbackend.h  renderbackends.cpp  renderbackends.h  renderer.cpp  renderer.h  renderer_p.h  rendererclient.cpp  rendererclient.h  renderermodule.cpp  renderermodule.h  rendering.cpp  rendering_p.h  sprite.cpp  sprite.h  sprite_p.h  spriteclient.cpp  spriteclient.h  spriteitem.cpp  spriteitem.h  spriteobjectitem.cpp  spriteobjectitem.h  spriteobjectitem_p.h  theme.cpp  theme.h  (+6 more)
tagaro/interface/: board.cpp  board.h  board_p.h  messageoverlay.cpp  messageoverlay.h  scene.cpp  scene.h  scene_p.h
tools/: CMakeLists.txt
tools/app/: CMakeLists.txt  applist.cpp  applist.h  instantiable.cpp  instantiable.h  main.cpp  mainwindow.cpp  mainwindow.h  mobilemainwindow.cpp  mobilemainwindow.h  mobilemainwindow_p.h  tagaroappui.rc
tools/kcmkdegames/: CMakeLists.txt  kcmkdegames.cpp  kcmkdegames.desktop  kcmkdegames.h
tools/kcmtagaro/: CMakeLists.txt  kcmtagaro.cpp  kcmtagaro.desktop  kcmtagaro.h  visuals.ui
tools/kgamesettings/: CMakeLists.txt  main.cpp
tools/shell/: CMakeLists.txt  main.cpp
tools/tagarosettings/: CMakeLists.txt  main.cpp  visuals.ui
visuals/: CMakeLists.txt  board.cpp  board.h  configdialog.cpp  configdialog.h  graphicsdelegate.cpp  graphicsdelegate_p.h  kgvsettings.kcfg  kgvsettings.kcfgc  renderer.h  renderer_p.h  rendererclient.cpp  rendererclient.h  settings.kcfgc  spriteitem.h  spriteobjectitem.h  theme.h  themeprovider.h  themeselector.cpp  themeselector_p.h  view.h
visuals/config/: kgvconfigdialog.cpp  kgvconfigdialog.h  kgvgraphicsdelegate.cpp  kgvgraphicsdelegate_p.h  kgvthemeselector.cpp  kgvthemeselector.ui  kgvthemeselector_p.h
visuals/rendering/: kgvboard.cpp  kgvboard.h  kgvrenderer.cpp  kgvrenderer.h  kgvrenderer_p.h  kgvrendererclient.cpp  kgvrendererclient.h  kgvspriteitem.cpp  kgvspriteitem.h  kgvspriteobjectitem.cpp  kgvspriteobjectitem.h  kgvview.cpp  kgvview.h
visuals/theming/: kgvtheme.cpp  kgvtheme.h  kgvthemeprovider.cpp  kgvthemeprovider.h
