#NOTE: Use the autogen-includes.sh script to update this file.
install(FILES
	Application
	AudioScene
	Board
	CachedProxyGraphicsSource
	DeclarativeThemeProvider
	Difficulty
	DifficultyLevel
	DifficultySlider
	GraphicsConfigDialog
	GraphicsSource
	GraphicsSourceConfig
	MessageOverlay
	ObjectPointer
	Scene
	Settings
	SimpleThemeProvider
	Sound
	Sprite
	SpriteClient
	SpriteItem
	SpriteObjectItem
	StandardTheme
	StandardThemeProvider
	Theme
	ThemeProvider
	TouchWindow
DESTINATION ${INCLUDE_INSTALL_DIR}/KGame COMPONENT Devel)
