#NOTE: Use the autogen-includes.sh script to update this file.
install(FILES
	AudioScene
	Board
	CachedProxyGraphicsSource
	GraphicsConfigDialog
	GraphicsSource
	GraphicsSourceConfig
	MessageOverlay
	ObjectPointer
	ObjectPool
	Scene
	Settings
	SimpleThemeProvider
	Sound
	Sprite
	SpriteClient
	SpriteItem
	SpriteObjectItem
	StandardTheme
	StandardThemeProvider
	Theme
	ThemeProvider
DESTINATION ${INCLUDE_INSTALL_DIR}/Tagaro COMPONENT Devel)
