#NOTE: Use the autogen-includes.sh script to update this file.
install(FILES
	Application
	AudioScene
	Board
	CachedProxyGraphicsSource
	DeclarativeThemeProvider
	GraphicsConfigDialog
	GraphicsSource
	GraphicsSourceConfig
	MessageOverlay
	ObjectPointer
	Scene
	Settings
	SimpleThemeProvider
	Sound
	Sprite
	SpriteClient
	SpriteItem
	SpriteObjectItem
	StandardTheme
	StandardThemeProvider
	Theme
	ThemeProvider
DESTINATION ${INCLUDE_INSTALL_DIR}/Tagaro COMPONENT Devel)
